# bq-airflow-dag-generator

./: .flake8  README.md  pyproject.toml
bq_airflow_dag_generator/: __init__.py
bq_airflow_dag_generator/src/: bq_airflow_dag_generator.py
bq_airflow_dag_generator/tests/: test_dags.py
tests/: test_dags.py
tests/test_data/samples/sample-ci/: python_entrypoint.py
